--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: exomeCopy
 Type: Package
 Title: Detection of CNV in exome/targeted sequencing data
-Version: 1.1.4
+Version: 1.1.5
 Date: 2011-11-23
 Author: Michael Love
 Maintainer: Michael Love <love@molgen.mpg.de>
 Description: A hidden Markov model for the detection of copy number variants (CNV) in exome/targeted sequencing read depth data.  The package uses positional covariates, such as background read depth and GC-content, to simultaneously normalize and segment the samples into regions of constant copy count.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: methods, graphics, IRanges, GenomicRanges, Rsamtools (>= 1.4.3)
+Imports: BiocGenerics
+Depends: methods, graphics, IRanges, GenomicRanges, Rsamtools
 Suggests: Biostrings
 biocViews: CopyNumberVariants, Sequencing, HighThroughputSequencing, Genetics
 
