added functions to compile and plot CNVs over samples
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/exomeCopy@63204 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,17 @@ importFrom(methods,show)
 importFrom(BiocGenerics, plot)
 import(IRanges,GenomicRanges,Rsamtools)
 
-export(copyCountSegments,
+export(subdivideGRanges,
        countBamInGRanges,
+       getGCcontent,
+       generateBackground,
        exomeCopy,
+       copyCountSegments,
        plot.ExomeCopy,
+       compileCopyCountSegments,
+       plotCompiledCNV,
        negLogLike,
-       viterbiPath,
-       subdivideGRanges)
+       viterbiPath)
 
 exportClasses(ExomeCopy)
 exportMethods(show,plot)
