import plot from stats4
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/exomeCopy@63479 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 useDynLib(exomeCopy, .registration = TRUE)
 importFrom(methods,show)
-importFrom(BiocGenerics, plot)
+importFrom(stats4, plot)
 import(IRanges,GenomicRanges,Rsamtools)
 
 export(subdivideGRanges,
