--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: exomeCopy
 Type: Package
 Title: Copy number variant detection from exome sequencing read depth
-Version: 1.5.6
+Version: 1.5.7
 Date: 2013-01-25
 Author: Michael Love
-Maintainer: Michael Love <love@molgen.mpg.de>
+Maintainer: Michael Love <michaelisaiahlove@gmail.com>
 Description:  Detection of copy number variants (CNV) from exome sequencing samples, including unpaired samples.  The package implements a hidden Markov model which uses positional covariates, such as background read depth and GC-content, to simultaneously normalize and segment the samples into regions of constant copy count.
 License: GPL (>= 2)
 LazyLoad: yes
