Modify biocViews to remove duplicate biocViews
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/exomeCopy@87054 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,4 @@ LazyLoad: yes
 Imports: stats4, methods
 Depends: IRanges, GenomicRanges, Rsamtools
 Suggests: Biostrings
-biocViews: CopyNumberVariation, Sequencing, Sequencing, Genetics
+biocViews: CopyNumberVariation, Sequencing, Genetics
